syntax = "proto3";
package demo;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.matthews.poc.transcode.protos";
option java_outer_classname = "ContactProtos";

message Person {
  string name = 1;
  int32 id = 2;  // Unique ID number for this person.
  string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;

  google.protobuf.Timestamp last_updated = 5;
}

message ById {
  int32 id = 1;
}

message Count {
  int32 count = 1;
}

service ContactService {
    rpc GetPerson(ById) returns (Person) {
      option (google.api.http) = {
        get: "/lookup"
      };
    };
    rpc AddPerson(Person) returns (ById);
    rpc RemovePerson(ById) returns (Person);
    rpc UpdatePerson(Person) returns (google.protobuf.Empty);
    rpc WatchPeople(Count) returns (stream Person);
}